[workspace]
members = ["crates/*"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace.lints.clippy]
nursery = "warn"
perf = "warn"
pedantic = "warn"
style = "warn"
complexity = "warn"
suspicious = "warn"


[workspace.dependencies]
#dev dependencies
glfw = "0.54.0"





# handy utils
log = "0.4.20"
env_logger = "0.10.1"
